--- a/Scripts/BA_generation/BA Generation_Parity.Rmd
+++ b/Scripts/BA_generation/BA Generation_Parity.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "NHANES Data Download"
+title: "Generating Biological Aging Measures for Parity Investigation"
 author: "Waylon J. Hastings"
 output: html_document
 ---
